// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with expenses 1`] = `
<p>
  Viewing 
  3
   
  expenses
   totalling 
  $735.80
</p>
`;

exports[`Should render ExpensesSummary with one expense 1`] = `
<p>
  Viewing 
  1
   
  expense
   totalling 
  $2.35
</p>
`;
